@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Apr 2010; <slep@gentoo.org> milter-greylist-4.3.4-r1.ebuild:
+  syntax clean mail-filter/milter-greylist
+
+  04 Apr 2010; <slep@gentoo.org> milter-greylist-4.3.4-r1.ebuild:
+  more syntax fix
+
   29 Mar 2010; <slep@gentoo.org> milter-greylist-4.3.4-r1.ebuild:
   fix syntax and clean
 
